# Erics-assignment

testbed_bringup/maps/testbed_map/: testbed_world.yaml
testbed_description/rviz/: full_bringup.rviz
testbed_navigation/: CMakeLists.txt  package.xml
testbed_navigation/config/: amcl_params.yaml  bt_navigator.yaml  controller_server.yaml  nav2_params.yaml  planner_server.yaml
testbed_navigation/launch/: localization.launch.py  map_loader.launch.py  navigation.launch.py
